ingress/ingress-nginx-tomcat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  namespace: ing-dev
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.item.com
      http:
        paths:
          - backend:
              service:
                name: nginx-svc
                port:
                  number: 80
            pathType: Prefix
            path: /
    - host: tomcat.item.com
      http:
        paths:
          - backend:
              service:
                name: tomcat-svc
                port:
                  number: 8080
            pathType: Prefix
            path: /
